reorganise non planar sections

--- a/main.tex
+++ b/main.tex
@@ -390,6 +390,18 @@ Results are reported and compared to the TD-DFT data in Figure~\ref{fig:caspt2}:
 are well-reproduced and errors with respect to the all-electron calculations are of a similar magnitude
 to those of the TD-DFT calculations. 
 
+\section*{\sffamily \large Helicene Spectra}
+
+We were insterested to look at some still larger and more complex molecules.
+In particular, we were curious to see how the potentials would perform in a system that wasn't planar,
+as distortions in the plane would, in an all-electron system, alter the influence of the sp$^2$-hybridised electrons.
+
+Figure~\ref{fig:helicene_spectra} displays the UV and ECD spectra for a series of [n]helicene molecules of $n=6$ to $n=9$ (structural diagrams are available in the SI), along with their pseudo-molecular counterparts. After shifting the pseudo-spectra by 32nm (a redshift), we can see the general shapes of the pseudo-system UV spectra are qualitatively very similar to the all-electron spectra, both in their spread and their intensities. We can also see that many of the peaks of the all-electron spectra appear to be clearly identifiable in the pseudo-spectra. 
+
+The ECD spectra are more complex. The general shapes of the pseudo-spectra are distorted compared to the all-electron results, with the distortion increasing from slight to more severe as the helicene becomes longer. We suggest that the reason for this is that with $n > 6$, the ends of the helicene overlap more and more, resulting in a much more complex electronic structure. However, one can still clearly identify the largest peaks for the smaller systems, and the direction of the dichroism remains clear throughout, though the declining accuracy at $n=9$ suggests this might not be so for larger helicene systems.
+
+These spectra show that we can be confident that our potentials can retain much of the physics of more complex $\pi$-systems, even allowing for some distortion to the molecular plane.
+
 \section*{\sffamily \large Coronene encapsulated in a carbon nanotube}	
  In a recent work, Nakamura \emph{et al.} have studied the photoexcitation	
 spectrum of a coronene polymer encapsulated in a carbon nanotube.\cite{nakamura2018}	
@@ -495,16 +507,6 @@ However, as both images have the same scale, one can see that the topologies
 of the electronic densities are very similar.
 This confirms that the results obtained are not artefactual but that the pseudo-potentials
 lead to a physically relevant electronic density.
-
-\section*{\sffamily \large Helicene Spectra}
-
-We were insterested to look at some still larger and more complex molecules. In particular, we were curious to see how the potentials would perform in a system that wasn't planar, as distortions in the plane would, in an all-electron system, alter the influence of the sp$^2$-hybridised electrons.
-
-Figure~\ref{fig:helicene_spectra} displays the UV and ECD spectra for a series of [n]helicene molecules of $n=6$ to $n=9$ (structural diagrams are available in the SI), along with their pseudo-molecular counterparts. After shifting the pseudo-spectra by 32nm (a redshift), we can see the general shapes of the pseudo-system UV spectra are qualitatively very similar to the all-electron spectra, both in their spread and their intensities. We can also see that many of the peaks of the all-electron spectra appear to be clearly identifiable in the pseudo-spectra. 
-
-The ECD spectra are more complex. The general shapes of the pseudo-spectra are distorted compared to the all-electron results, with the distortion increasing from slight to more severe as the helicene becomes longer. We suggest that the reason for this is that with $n > 6$, the ends of the helicene overlap more and more, resulting in a much more complex electronic structure. However, one can still clearly identify the largest peaks for the smaller systems, and the direction of the dichroism remains clear throughout, though the declining accuracy at $n=9$ suggests this might not be so for larger helicene systems.
-
-These spectra show that we can be confident that our potentials can retain much of the physics of more complex $\pi$-systems, even allowing for some distortion to the molecular plane.
 
 \section*{\sffamily \large Timings}
 The model that we develop in this work allows significant computational gains.
