add ref nakai_theoretical_2012

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -1384,4 +1384,19 @@ Unique-ID = {{ISI:A1975AT25100002}},
 	year = {2018},
 	doi = {10.1021/acs.jpcc.8b03757},
 }
-
+@article{nakai_theoretical_2012,
+	title = {Theoretical and {Experimental} {Studies} on {Circular} {Dichroism} of {Carbo}[n]helicenes},
+	volume = {116},
+	issn = {1089-5639},
+	url = {https://doi.org/10.1021/jp304576g},
+	doi = {10.1021/jp304576g},
+	abstract = {The chiroptical properties of a series of carbo[n]helicenes (n = 4–10) were investigated by the state-of-the-art approximate coupled cluster and density functional theory calculations. The theoretical calculation at the RI-CC2/TZVPP//DFT-D2-B97-D/TZVP level nicely reproduced the experimental CD spectra in both excitation energy and rotational strength without any shift or scaling. These calculations afforded the electric and the magnetic transition dipole moment vectors in [n]helicenes, allowing us to discuss the observed rotational strengths as a function of the number of benzene rings. Although the observed CD intensity was not immediately correlated to any of the calculated parameters, the anisotropy (g) factor of the 1Bb band and the specific rotation were found inversely proportional to n and nicely correlated with the helical pitch, but discontinuous at n = 6, where the aromatic rings start to overlap. In contrast, the g factor at the 1Ba band was rather insensitive to n. It was also revealed that the excitation energies of the 1Bb and 1Ba bands are inversely proportional to n over the entire range of n examined. The theoretical predictions also enabled us to rectify the erroneous experimental CD spectra of [5]- and [6]helicenes reported earlier, by using the enantiopure samples resolved by chiral HPLC.},
+	number = {27},
+	urldate = {2019-01-14},
+	journal = {J. Phys. Chem. A},
+	author = {Nakai, Yoshito and Mori, Tadashi and Inoue, Yoshihisa},
+	month = jul,
+	year = {2012},
+	pages = {7372--7385},
+	file = {ACS Full Text Snapshot:/home/yannick/Zotero/storage/UEHG2V65/jp304576g.html:text/html;Nakai et al_2012_Theoretical and Experimental Studies on Circular Dichroism of Carbo[n]helicenes.pdf:/home/yannick/Zotero/storage/TN38UY7F/Nakai et al_2012_Theoretical and Experimental Studies on Circular Dichroism of Carbo[n]helicenes.pdf:application/pdf}
+}
