--- a/main.tex
+++ b/main.tex
@@ -391,7 +391,7 @@ are well-reproduced and errors with respect to the all-electron calculations are
 to those of the TD-DFT calculations. 
 
 \section*{\sffamily \large Coronene encapsulated in a carbon nanotube}	
- In a recent work, Nakamura \emph{et al.} have studied the photoexcitation	
+In a recent work, Nakamura \emph{et al.} have studied the photoexcitation	
 spectrum of a coronene polymer encapsulated in a carbon nanotube.\cite{nakamura2018}	
 In this work, they show that two absorption bands (at around 1.7 and 3.4 eV)	
 lead to a charge transfer from the coronene polymer to the nanotube.	
@@ -399,43 +399,43 @@ This charge transfer process is backed up by DFT calculations in the plane wave 
 using boundary conditions.	
 These calculations do not allow for the computation of excited states.	
 Instead, the nature of the transition is assumed from the calculation of band structure	
-of a model system (one (19,0) nanotube) the whole system.	
+of a model system, which is a one (19,0) nanotube subset of the whole system.	
 We tried to investigate this problem with our pseudo-potentials in the cluster approximation	
-to see if we could find discrete electronic excitations, which would have a charge transfer	
+to see if we could find discrete electronic excitations, which would confirm a charge transfer	
 between the coronene and the nanotube character.	
 
- An emphasis should be made about the fact that we are trying to use the pseudo-potentials	
+ An emphasis should be made of the fact that we are trying to use the pseudo-potentials	
 out of their scope as they were extracted for planar molecules only.	
-However, if the curvature radii is not too small, we are confident enough that our	
+However, if the curvature radii are not too small, we are confident enough that our	
 pseudo-potentials could still lead to physically relevant results.	
 It is to be noted here that the curvature of the nanotube leads to the loss of strict	
 $\sigma$ and $\pi$ definition of the electronic cloud.	
 We shall refer to an orbital as $\pi$-like on a carbon atom when it exhibits	
 one lobe above and one lobe below	
 the plane made by the three nearest neighbours of the atom considered.	
-We make the hypothesis that it is mainly the $\pi$-like electrons of the molecule that are responsible for the	
+We propose that the $\pi$-like electrons are mainly responsible for the	
 photoelectronic properties of the system at low energy, otherwise, we would not be able to	
 obtain any sensible result with our method.	
 
  The comparison between experiment and such a cluster approach is risky as the system under study	
 is a very crude approximation of the experimental system.	
 Experimentally, Nakamura \emph{et al.} make measurements over a variety of nanotubes (their	
-diameter ranges from 1.0 to 1.5~nm), which each encapsulate one coronene.	
+diameter ranges from 1.0 to 1.5~nm), each encapsulating one coronene.	
 We could study a model system of the experimental system	
-using a coronene molecule encapsulated in a nanotube slice as can be seen in figure~\ref{fig:nanotube_model}.	
-We chose a non metallic chiral nanotube of an intermediate diameter as the ones used experimentally to	
+using a coronene molecule encapsulated in a nanotube slice as can be seen in Figure~\ref{fig:nanotube_model}.	
+We chose a non-metallic chiral nanotube of an intermediate diameter as the ones used experimentally to	
 be as close as possible to the experimental system.	
 The calculation of the excited states of this model system is not routine	
-at the TD-DFT level as it would require the calculation of a huge number of excited states (probably	
-some thousands as many $\sigma$ excitations ).	
+at the TD-DFT level as it would require the calculation of a huge number of excited states, probably	
+some thousands, as one must include both the $\sigma$ and $\pi$ excitations.	
 Because of the reduction of the system when using our pseudo-potentials	
 (only $\pi$-like electrons treated explicitly), we could do such a calculation in the $\pi$-like-only space.	
 We performed the calculation of the photoabsorption spectrum with TD-DFT from the	
-ground state to the first 200 excited states (see Supplementary Informations).	
+ground state to the first 200 excited states (see Supplementary Information).	
 The computation of these 200 excitation energies leads to a maximum energy of roughly 3.6~eV.	
 A peak appears in the region of interest of the spectrum around 1.7 eV and two excitations (at 748 and 770~nm) 	
 have large oscillator strengths.	
-The transition densities of these excitations are shown in figure~\ref{fig:trans_55_59}.	
+The transition densities of these excitations are shown in Figure~\ref{fig:trans_55_59}.	
 The excitation with the higher oscillator strength at 748~nm shows electronic depletion and	
 increase on both the coronene and the nanotube.	
 This rearrangement is the reason for the large oscillator strength but cannot be assigned	
@@ -445,10 +445,10 @@ to the nanotube (only blue $\pi$ density on the coronene and the red $\pi$ densi
 is only on the tube).	
 Such a result confirms the assignment made by Nakamura \emph{et al}.	
 
- These calculations, despite their crudeness lead to informative results on the	
+ These calculations lead to informative results for the	
 electronic structure of large system, provided that the properties of interest involve	
 electrons with a strong $\pi$ character.	
-They allow for the use of quantum chemistry method on system for which such calculations	
+They allow for the use of quantum chemistry methods on systems for which such calculations	
 even if strictly not impossible would be computationally intensive to say the least.
 
 \section*{\sffamily \large Topological analysis of the density}
