--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@ It is employed in \textsl{ab-initio} calculations in which several physical char
 including the orbital energies and first ionisation energy, as well as first excitation energy and UV spectra, are found to be well-reproduced by the pseudo-system. 
 Remarkably, not only are the $\pi$ excitation energies in good agreement with the reference calculations, but also transition
 densities and intensities, confirming that the virtual space obtained with the pseudo-potentials is of excellent quality.
-Finally, this approach is capable of reproducing the $\pi$ electron systems of small or large, planar hydrocarbons at low computational cost.
+Finally, this approach is capable of reproducing the $\pi$ electron systems of small or large, planar or near-planar hydrocarbons at low computational cost.
 \end{abstract}
 
 \begin{wileykeywords}
@@ -601,6 +601,10 @@ CASPT2 calculations have also been positively tested.
 (4) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)),
 or a mixture of both (as in the polyenes or at the edge of fused ring systems). 
 (5) They offer a significant gain in computational time as compared to all-electron calculations.
+(6) They were employed to compute  UV and ECD spectra of extended, near-planar systems: helicenes
+and a coronene embedded in a nanotube. Despite the fact that our method does not reach chemical
+accuracy in ionisation energies, it can be useful to solve highly dificult assignations
+for large systems in a limited time.
 
 Our work remains ongoing, and we envisage two areas for further development.
 (1) We are at the early stages of creating potentials that can successfully interact with neighbouring all-electron atoms.
@@ -610,7 +614,7 @@ Such potentials could be useful as link atoms in QM/MM calculations, functioning
 
 (2) We would like further to test and to expand this work into a general method for increasing computational efficiency in large systems in
 which there are many sp$^{2}$ carbon units, both in SCF calculations and the generation of electronic spectra.
-This could be particularly useful in large molecules which are optically active, such as helicenes, to simulate ECD spectra.
+This could be particularly useful in large molecules which are optically active to simulate ECD spectra.
 The challenge is to ensure the right occupation of the $\pi$-like orbitals despite the loss of the
 $\sigma-\pi$ separation.
 
