--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -179,8 +179,30 @@ are all-electron calculation where the $\sigma$ orbitals were frozen in the cati
 %\label{fig:method_comp}
 %\end{figure}
 
-\section*{Coronene encapsulated in carbon nanotube}
+\section*{Helicene spectra}
+\begin{figure}
+\begin{center}
+\includegraphics[width=8cm]{comparison_EXP_CC2_DFT.eps}
+\end{center}
+\caption{\label{fig:comparison_EXP_CC2_DFT} 
+Comparison of experimental and CC2 and PBE0/def2-SV(P) computed ECP spectra.
+}
+\end{figure}
+In this work, we get interested in carbon based helicenes made of
+ortho-fused-six-member-rings only.
+The agreement between experiment, CC2 and DFT calculations is very good according to
+figure \ref{fig:comparison_EXP_CC2_DFT}.
+Relative intensities, sign and positions of the absorption peaks are remarkably
+well reproduced by the DFT calculations with no shift on the wavelengths.
+The ECD spectra of M helicenes feature a positive absorption at low energy 
+followed by a negative absorption about 100 nm further (the spectrum of ch[8]
+is ploted with a thicker line to emphasize this feature).
+This characteristic behavior (in the above defined framework), is indicative
+of the chirality M or P of the helicene.
+As a reminder, when the helix followed by a helicene rotates in the counterclockwise
+direction, the helicene is labelled P (plus) and M (minus) otherwise.
 
+\section*{Coronene encapsulated in carbon nanotube}
 \begin{figure}
 \begin{center}
 \includegraphics[width=8cm]{spectrum_w_impulses.eps}
