--- a/main.tex
+++ b/main.tex
@@ -129,10 +129,10 @@ between explicitly treated active electrons, and
 the mono-electronic operator:
 \begin{equation}
 \label{eq:monoElectronicOperator}
-\hat{h}(i) = -\frac{1}{2}\Delta_i - \frac{(Z-Z_c)}{r_i} + \hat{V} + \hat{\sigma}
+\hat{h}(i) = -\frac{1}{2}\Delta_i + \sum_{K=1}^N \left[- \frac{(Z_K-Z_{C_K})}{r_{iK}} + \hat{V_K} + \hat{\sigma_K} \right]
 \end{equation}
-where $\Delta_i$ is the Laplacian of the coordinates of electron $i$, and 
-$Z_C$ is the number of dormant electrons withdrawn from the reference system.
+where $\Delta_i$ is the Laplacian of the coordinates of electron $i$, $N$ denotes the number of nuclei and
+$Z_{C_K}$ is the number of dormant electrons withdrawn from the $K^{th}$ nucleus of the reference system.
 The operator $\hat{\sigma}$ is the `no-collapse' term that prevents active electrons
 collapsing into the dormant region; the operator $\hat{V}$ reproduces the 
 Coulomb and exchange interactions, for which Huzinaga proposed a spectral formulation:
@@ -156,7 +156,7 @@ and no modification of the source code should be done.
 
 This article is structured as follows.
 In the first part, the method is defined in detail.
-The second part shows the results obtained using the most refined version of the method; the extracted pseudo-potentials are then employed for extended systems, with results and discussion. A final perspective is presented in the conclusion.
+The second part shows the results obtained using the most refined version of the method; the extracted pseudo-potentials are then employed for extended planar and non-planar systems, with results and discussion. A final perspective is presented in the conclusion.
 
 \section*{\sffamily \Large METHODOLOGY}
 
@@ -181,14 +181,20 @@ they are not explicitly treated.
 \section*{\sffamily \large Pseudo-potential definition} \label{secpotdef}
 
 The potentials were extracted on the basis of Hartree-Fock calculations, as it is unbiased in terms of
-electronic correlation. 
+electronic correlation. The correlation will then be determined by the choice of the method.
 As in our previous work,\cite{drujon_pseudopotentials_2013}
 we take the planar CH\(^{\bullet}_{3}\) as our starting system to be reproduced.
-It is the smallest system containing one and only one sp$^2$-hybridised carbon atom. This choice allows us to isolate the different electrostatic interactions to build a physically meaningful model. We make use of two kinds of Gaussian pseudo-potentials,\cite{me_structure_theory} of \(s\) and \(p\) shapes. As we want to avoid modifying the quantum chemistry software itself, the pseudo-potentials have a semi-local form and we choose to preserve the \(r^{-1}\) behaviour as in Huzinaga's work.
-The mono-electronic operator is written as:
+It is the smallest system containing one and only one sp$^2$-hybridised carbon atom. This choice allows us to isolate the different electrostatic interactions to build a physically meaningful model. We make use of two kinds of Gaussian pseudo-potentials,\cite{me_structure_theory} of \(s\) and \(p\) shapes. 
+Figure~\ref{figure:ref_pseudo_diagram} displays the final pseudo-system: The CH\(^{\bullet}_{3}\) radical has been replaced by a hydrogen-like `pseudo-carbon', with a nuclear charge of \(Z_{nucleus} = Z-Z_C = 1\), and one electron occupying the \(p_{z}\) orbital. 
+There are now no H atoms, and the system is surrounded by three potential sets at a planar distance of \(d\), each consisting of 
+two \(s\)-shaped potentials with a distance above and below the \(xy\) plane of \(c\). A further \(p\)-shaped potential is applied
+directly to the pseudo-carbon.
+
+As we want to avoid modifying the quantum chemistry software itself, the pseudo-potentials have a semi-local form and we choose to preserve the \(r^{-1}\) behaviour as in Huzinaga's work.
+The mono-electronic operator for CH\(^{\bullet}_{3}\) is written as:
 \begin{equation}
 \label{eq:monoElectronicOperator2}
-\hat{h}(i) = -\frac{1}{2}\Delta_i - \frac{(Z-Z_c)}{r_i} + \hat{W}
+\hat{h}(i) = -\frac{1}{2}\Delta_i - \frac{1}{r_i} + \hat{W}
 \end{equation}
 The multi-centered pseudo-potentials that we build read as follows:
 \begin{equation}
@@ -208,14 +214,9 @@ Thus, this second term is not stricly equivalent to Huzinaga's $B_J$ terms as ou
 the bi-electronic interactions \textit{and} part of the no-collapse term.
 This later role was served by the $\hat{\sigma}$ operator in Huzinaga's formulation. 
 
-Figure~\ref{figure:ref_pseudo_diagram} displays the final pseudo-system: The CH\(^{\bullet}_{3}\) radical has been replaced by a hydrogen-like `pseudo-carbon', with a nuclear charge of \(Z_{nucleus} = 1\), and one electron occupying the \(p_{z}\) orbital. 
-There are now no H atoms, and the system is surrounded by three potential sets at a planar distance of \(d\), each consisting of 
-two \(s\)-shaped potentials with a distance above and below the \(xy\) plane of \(c\). A further \(p\)-shaped potential is applied
-directly to the pseudo-carbon.
 
-This gives multiple variables we can use to manipulate the properties of the system.
-We can alter the strength and diffuseness of the \(p\) and \(s\) potentials themselves,
-as well as vary the distances \(d\) and \(c\) by moving the \(s\)-potentials.
+Our formulation gives multiple variables we can use to manipulate the properties of the system.
+We can alter the strength and diffuseness of the \(p\) and \(s\) potentials themselves.
 In the effort to keep the effects 
 of the $s$ potentials as localised as possible, we chose $d=0.5$ a.u. and \(c = 0.25\;a.u.\), making the atom-atom distance approximately the shortest permitted in QM programs.
 
@@ -245,7 +246,7 @@ is comparable, and slightly higher, than the error obtained with
 our potentials (error of 0.715~eV).
 
 The potentials were extracted on the basis of Hartree-Fock calculations, but they are transferable
-to other methods and they are employed within the DFT and TD-DFT frameworks in the application section.
+to other methods and they are employed within the DFT and TD-DFT frameworks for both planar and non-planar systems in the `Applications' section.
 
 \section*{\sffamily \large COMPUTATIONAL DETAILS}
 
@@ -327,9 +328,9 @@ ionisation energies are slightly higher than in reference calculations, even if 
 We recall here that this quantity is particularly challenging for our method, as we do not account for
 the reorganisation of the $\sigma$ electrons in the cation.
 For comparison, the mean ionisation errors obtained with our pseudo-potentials are between 7\% (PBE0) and 11\% (TPSS) 
-and an average error of 10\% is found in ROHF calculations for the small-polyenes where all the $\sigma$ doubly-occupied 
+and an average error of 10\% is found in all-electron ROHF calculations for the small-polyenes where all the $\sigma$ doubly-occupied 
 orbitals are frozen in the cations, as they are obtained in the calculations for the neutral systems
-(see the Supplementary Information for details). 
+(see the Supplementary Information, SI, for details). 
 %\textsl{AS A REFERENCE??:Errors are smaller than (but close to) those obtained by freezing in the cation calculations 
 %all the orbitals but the SOMO, as they are obtained in the calculations for the neutral systems, see the Supplementary
 %Information for details.}
@@ -359,19 +360,19 @@ As with the polyenes, the general trend of the results is well-replicated
 by the pseudo-systems, and the percentage errors, displayed in Table
 \ref{table:ring_system_errors}, are similar.
 This is not surprising because aromaticity arises from the fact that
-the $p$ orbitals overlap and are form a ring.
+the $p$ orbitals overlap and form a ring.
 Since we reproduce the $p$ orbitals well, the aromatic character of the $\pi$ ring
 appears.
 
 Encouraged by the fact that low-lying first excited states as well as the ionisation potentials of a large range of PAH are well-reproduced by our pseudo-potentials,
-we decided to explore the virtual space further by computing the 20 first singlet
-$\pi$ excited states, and to compare the results to all-electron calculations using the PBE0 functional.
+we decided to explore the virtual space further by computing the low-energy UV spectrum (20 first singlet
+$\pi$ excited states), and to compare the results to all-electron calculations using the PBE0 functional.
 Absorption spectra with pseudo-potential and all-electron
 calculations for a selection of PAH are shown in Figure~\ref{fig:cnhn_uv}.
 As the pseudo-potential calculations contain only $\pi$ orbitals, the excitations from $\sigma$ to $\sigma$ orbitals cannot be reproduced 
 (these are denoted by a * above the peaks in the graphs).
 The overall agreement is very satisfactory.
-Excitation energies computed with the pseudo-potential are systematically too high, a red shift of
+Excitation energies computed with the pseudo-potential are systematically too high, a red scaling factor of
 0.91 was used on the computed excited energies to match the reference spectra for the singlet.
 This is a very pleasing surprise owing to the fact that the pseudo-potentials used
 to obtain these results were extracted on the first excited state of ethylene.
@@ -382,10 +383,10 @@ excellent agreement.
 The most remarkable feature to us is the neatness of the agreement of the relative excitation intensities in both singlet and triplet cases.
 This certainly shows again that the pseudo-carbon we have extracted captures a lot of the physics of the reference system as the intensities are related to the transition dipole moment.
 
-Finally, our pseudo-potentials are tested within the CASPT2 framework, by computing the first 
+The use of our potentials is not restricted to DFT. To demonstrate this, we shall compute at the CASPT2 level the first 
 singlet-singlet and singlet-triplet excitation energies for benzene, naphthalene and anthracene. 
 For both reference and pseudo calculations,
-the active spaces are (6,6), (10,10), and (10,10), respectively for benzene, naphthalene and anthracene. 
+the active spaces are (6,6), (10,10), and (10,10), respectively.
 Results are reported and compared to the TD-DFT data in Figure~\ref{fig:caspt2}: trends 
 are well-reproduced and errors with respect to the all-electron calculations are of a similar magnitude
 to those of the TD-DFT calculations. 
@@ -437,7 +438,7 @@ lead to a physically relevant electronic density.
 
 \section*{\sffamily \large Helicene Spectra}
 
-We were insterested to look at some still larger and more complex molecules.
+We were interested in looking at some yet larger and more complex molecules.
 In particular, we were curious to see how the potentials would perform in a system that wasn't planar,
 as distortions in the plane would, in an all-electron system,
 alter the influence of the sp$^2$-hybridised electrons.
@@ -450,22 +451,21 @@ reproduce with good accuracy the experimental spectra with DFT (PBE0/def2-SV(P))
 
 In this work, we are interested in carbon based helicenes made of
 ortho-fused-six-member-rings only.
-The agreement between experiment, CC2 and DFT calculations is very good according to
-Figure \ref{fig:comparison_EXP_CC2_DFT} (see SI).
+The agreement between experiment, and all-electron CC2 and DFT calculations is very good according to
+Figure S-III (see SI).
 Relative intensities, sign and positions of the absorption peaks are remarkably
-well reproduced by the DFT calculations with no shift on the wavelengths.
-The ECD spectra of M helicenes feature a positive absorption at low energy 
-followed by a negative absorption about 100 nm further (the spectrum of ch[8]
-is plotted with a thicker line to emphasise this feature).
+well reproduced by the DFT calculations with no shift on the wavelengths. As a reminder, when the helix followed by a helicene rotates in the counter-clockwise
+direction, the helicene is labelled P (plus) and M (minus) otherwise.
+The ECD spectra of P helicenes feature a positive absorption at low energy 
+followed by a negative absorption about 100 nm further (the spectrum of [8]helicene
+is plotted with a thicker line to emphasise this feature). 
 This characteristic behavior (in the above defined framework) is indicative
 of the chirality M or P of the helicene.
-As a reminder, when the helix followed by a helicene rotates in the counter-clockwise
-direction, the helicene is labelled P (plus) and M (minus) otherwise.
 %yc
 
-Figure~\ref{fig:helicene_spectra} displays the UV and ECD spectra for a series of [n]helicene molecules of $n=6$ to $n=9$ (structural diagrams are available in the SI),
+Figure~\ref{fig:helicene_spectra} displays the UV and ECD spectra for a series of P-[n]helicene molecules of $n=6$ to $n=9$ (structural diagrams are available in the SI),
 along with their pseudo-molecular counterparts.
-After shifting the pseudo-spectra by 32nm (a redshift), we can see the general shapes of the pseudo-system UV spectra are qualitatively very similar to the all-electron spectra,
+After red-shifting the pseudo-spectra by 32~nm, we can see the general shapes of the pseudo-system UV spectra are qualitatively very similar to the all-electron spectra,
 both in their spread and their intensities.
 We can also see that many of the peaks of the all-electron spectra appear to be clearly identifiable in the pseudo-spectra. 
 
@@ -476,7 +476,7 @@ We suggest that the reason for this is that with $n > 6$, the ends of the helice
 resulting in a much more complex electronic structure.
 However, one can still clearly identify the largest peaks for the smaller systems, and the direction of the dichroism remains clear throughout.
 
-These spectra show that we can be confident that our potentials can retain much of the physics of more complex $\pi$-systems, even allowing for some distortion to the molecular plane.
+These spectra show that we can be confident that our potentials can retain much of the physics of complex $\pi$-systems, even allowing for some distortion of the molecular plane.
 These calculations show that the ECD spectra of helicenes are mainly due to the $\pi$-like electrons and
 that our pseudo-potentials allow for the reproduction of properties which are much more difficult to reproduce
 than UV spectra as they are much more sensitive to the environment.
@@ -490,7 +490,7 @@ This charge transfer process is backed up by DFT calculations in the plane wave 
 using boundary conditions.	
 These calculations do not allow for the computation of excited states.	
 Instead, the nature of the transition is assumed from the calculation of band structure	
-of a model system, which is a one (19,0) nanotube subset of the whole system.	
+of a model system, which is a (19,0) nanotube.	
 We tried to investigate this problem with our pseudo-potentials in the cluster approximation	
 to see if we could find discrete electronic excitations, which would confirm a charge transfer	
 between the coronene and the nanotube character.	
@@ -514,7 +514,7 @@ Experimentally, Nakamura \emph{et al.} make measurements over a variety of nanot
 diameter ranges from 1.0 to 1.5~nm), each encapsulating one coronene.	
 We could study a model system of the experimental system	
 using a coronene molecule encapsulated in a nanotube slice as can be seen in Figure~\ref{fig:nanotube_model}.	
-We chose a non-metallic chiral nanotube of an intermediate diameter as the ones used experimentally to	
+We chose a non-metallic chiral (1,14) nanotube of an intermediate diameter as the ones used experimentally to	
 be as close as possible to the experimental system.	
 The calculation of the excited states of this model system is not routine	
 at the TD-DFT level as it would require the calculation of a huge number of excited states, probably	
@@ -522,7 +522,7 @@ some thousands, as one must include both the $\sigma$ and $\pi$ excitations.
 Because of the reduction of the system when using our pseudo-potentials	
 (only $\pi$-like electrons treated explicitly), we could do such a calculation in the $\pi$-like-only space.	
 We performed the calculation of the photoabsorption spectrum with TD-DFT from the	
-ground state to the first 200 excited states (see Supplementary Information).	
+ground state to the first 200 excited states (see SI).	
 The computation of these 200 excitation energies leads to a maximum energy of roughly 3.6~eV.	
 A peak appears in the region of interest of the spectrum around 1.7 eV and two excitations (at 748 and 770~nm) 	
 have large oscillator strengths.	
@@ -637,7 +637,7 @@ or a mixture of both (as in the polyenes or at the edge of fused ring systems).
 (5) They offer a significant gain in computational time as compared to all-electron calculations.
 (6) They were employed to compute  UV and ECD spectra of extended, near-planar systems: helicenes
 and a coronene embedded in a nanotube. Despite the fact that our method does not reach chemical
-accuracy in ionisation energies, it can be useful to solve highly dificult assignations
+accuracy in ionisation energies, it can be useful to solve highly difficult assignations
 for large systems in a limited time.
 
 Our work remains ongoing, and we envisage two areas for further development.
@@ -648,9 +648,7 @@ Such potentials could be useful as link atoms in QM/MM calculations, functioning
 
 (2) We would like further to test and to expand this work into a general method for increasing computational efficiency in large systems in
 which there are many sp$^{2}$ carbon units, both in SCF calculations and the generation of electronic spectra.
-This could be particularly useful in large molecules which are optically active to simulate ECD spectra.
-The challenge is to ensure the right occupation of the $\pi$-like orbitals despite the loss of the
-$\sigma-\pi$ separation.
+This can be particularly useful in large molecules which are optically active to simulate ECD spectra.
 
 \subsection*{\sffamily \large ACKNOWLEDGMENTS}
 We are grateful to the French Research Ministry, Aix-Marseille University and CNRS for financial support.
@@ -780,7 +778,7 @@ Hydrogen atoms were removed from the representation.
 %fig12	
 \caption{Transition densities for the excitation at 770 nm (left) and 747 nm (right) 	
 at the TD-DFT(PBE0) level with the pseudo-potentials developed in this work.	
-Blue indicates a diminution of electronic dentiry and red indicates an increase of electronic density.	
+Blue indicates a diminution of electronic density and red indicates an increase of electronic density.	
 }	
 \label{fig:trans_55_59}	
 \end{figure}
