--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -180,7 +180,7 @@ are all-electron calculation where the $\sigma$ orbitals were frozen in the cati
 %\end{figure}
 
 \section*{Helicene spectra}
-We performed calculations on carbo-helicene molecules from 6 to 9 rings. Thier structures are
+We performed calculations on carbo-helicene molecules from 6 to 9 rings. Their structures are
 shown in Figure~\ref{fig:helicene}.
 
 \begin{figure}
@@ -214,7 +214,10 @@ of the chirality M or P of the helicene.
 As a reminder, when the helix followed by a helicene rotates in the counterclockwise
 direction, the helicene is labelled P (plus) and M (minus) otherwise.
 
+\clearpage
+
 \section*{Coronene encapsulated in carbon nanotube}
+
 \begin{figure}
 \begin{center}
 \includegraphics[width=8cm]{spectrum_w_impulses.eps}
@@ -227,11 +230,13 @@ obtained with TD-DFT (with the PBE0 functional) asking for 200
 excited states (impulses in blue).
 Excitations relevant for the charge transfert process between
 the nanotube and the coronene moities are labeled with their wavelength values.
-The gray zone indicates where no excitation is computed, which explains the
+The grey zone indicates where no excitation is computed, which explains the
 decay of the spectrum.
 }
 \end{figure}
+
 \section*{Comparison with our previous study}
+
 \begin{figure}
 \begin{center}
 \includegraphics[width=8cm]{short_pbe0_tddft_2013}
@@ -240,6 +245,7 @@ decay of the spectrum.
 \caption{Comparison of pseudo-alkenes with previous (Drujon and Carissan, JCC 2013 (34) 49-59) and current potentials using TD-DFT excitation energies.}
 \label{fig:alkenes_tddft}
 \end{figure}
+
 Figure \ref{fig:alkenes_tddft} shows the excitation energy of the first triplet $\pi$ excited state
 for the six short polyenes studied in the article.
 These excitation energies are obtained at the same level of theory both in the previous
@@ -255,7 +261,7 @@ As can be seen from figures \ref{fig:cnhn_uv_rpas}, \ref{fig:cnhn_uv_rpat},
 \ref{fig:cnhn_uv_ciss} and \ref{fig:cnhn_uv_cist}, Random Phase Approximation (RPA)
 and Configuration Interaction Singles (CIS) lead to very similar spectra.
 Yet, RPA leads to a better agreement for the calculated intensities.
-However, it is worth noting that the decision to use or not the Tamm Dancoff approximation
+However, it is worth noting that the decision to use or not the Tamm-Dancoff approximation
 does not affect the overall good agreement between reference and pseudo-potential.
 
 \section*{Triplet Instability}
@@ -322,15 +328,16 @@ framework.}
 \label{fig:cnhn_uv_ciss}
 \end{figure}
 
+\clearpage
+
 \section*{B3-LYP Calculations}
 
-Here we report calculations with the B3LYP functional on the spectra of small rings and helicenes.
+Here we report calculations with the B3LYP functional on the spectra of small rings and helicenes. From Figure \ref{fig:cnhn_uv_rpas_b3lyp} we can see that the spectra of the planar ring systems using the B3-LYP functional give very similar results to those of the PBE0 functional. From Figure \ref{fig:helicene_spectra_b3lyp} we can see that the pseudo-[n]helicene spectra for B3-LYP do not match the all-electron spectra as well as those of PBE0. 
 
 \begin{figure}[b]
 \begin{center}
 \includegraphics[width=11cm]{b3_rings_rpas}
 \end{center}
-%\vspace{0.25in}
 \hspace*{3in}
 \caption{Comparison of the absorption spectra for the 20 first singlet excitations obtained with
 pseudo-potentials (ps) and all-electron (ref) calculations (def2-SV(P)/TD-B3LYP) within the RPA
