--- a/response.lyx
+++ b/response.lyx
@@ -425,7 +425,7 @@ not
 \begin_inset Quotes erd
 \end_inset
 
- is ours as we believe this is what referee 2 meant.
+ is ours as we believe this is what Referee 2 meant.
 \end_layout
 
 \begin_layout Standard
