--- a/supplementary_material.tex
+++ b/supplementary_material.tex
@@ -187,7 +187,14 @@ shown in Figure~\ref{fig:helicene}.
 \begin{center}
 \includegraphics[width=8cm]{helicene.eps}
 \end{center}
-\vspace{0.25in}
+The spectrum obtained with pseudo-potentials at the TD-PBE0 level of the nanotube encapsulating coronene is given herein in Figure~\ref{fig:spectrum_nanotube}.
+The first 200 first excited states were computed.
+This allows for a study of the peak at 1.7 eV as two excitations appear to have an intensity much above the average.
+These excitations at 747 and 770 nm are studied in the manuscript.
+However, there are no such clear feature around 3.4 eV.
+It is likely that the level of modelling is not sufficient in this case.
+Either, the basis set is not large enough or the number of states to be computed is larger
+or TD-DFT cannot handle such high energy excited states.\vspace{0.25in}
 \hspace*{3in}
 \caption{Scheme of the structure of (P)-helicenes computed in this work.}
 \label{fig:helicene}
