--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@ It is employed in \textsl{ab-initio} calculations in which several physical char
 including the orbital energies and first ionisation energy, as well as first excitation energy and UV spectra, are found to be well-reproduced by the pseudo-system. 
 Remarkably, not only are the $\pi$ excitation energies in good agreement with the reference calculations, but also transition
 densities and intensities, confirming that the virtual space obtained with the pseudo-potentials is of excellent quality.
-Finally, this approach is capable of reproducing the $\pi$ electron systems of small or large, planar or near-planar hydrocarbons at low computational cost.
+Finally, this approach is capable of reproducing the $\pi$ electron systems of small or large, planar or non-planar hydrocarbons at low computational cost.
 \end{abstract}
 
 \begin{wileykeywords}
@@ -620,25 +620,24 @@ supporting the idea that the $p$ potential retrieves the incomplete screening ef
 
 In this paper pseudo-potentials have been developed for sp$^{2}$-hybridised carbon units containing only one nuclear charge and one electron. 
 Their main features are that: 
-(1) They are fully atomic, meaning that they can be placed relative only to the carbon atom itself and the direction of its bonds. 
-(2) We could show that not only were the occupied orbitals well-reproduced by the use of these new potentials, but also that the virtual space is of good quality for excited states calculation. 
+(1) They can be employed with both Hartree-Fock and DFT methods including PBE0, PBE, TPSS and TPSSh functionals. 
+CASPT2 calculations have also been positively tested.
+(2) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)),
+or a mixture of both (as in the polyenes or at the edge of fused ring systems).
+(3) They offer a significant gain in computational time as compared to all-electron calculations.
+(4) They are fully atomic, meaning that they can be placed relative only to the carbon atom itself and the direction of its bonds. 
+(5) We could show that not only were the occupied orbitals well-reproduced by the use of these new potentials, but also that the virtual space is of good quality for excited states calculation. 
 %They are able to reproduce electronic properties including HOMO, 1$^{st}$ ionisation and singlet-triplet gap energies, as well as reproduce physically reasonable absorption spectra and the electronic
-%density leads to the same AIM view of the bonding pattern.
-They are able to reproduce physically reasonable absorption spectra and the electronic
-density leads to the same AIM view of the bonding pattern. Ionisation energies have
+%density leads to the same AIM view of the bonding pattern. 
+They are able to lead to the same AIM view of the bonding pattern and to reproduce physically reasonable absorption spectra together with physically-grounded electronic transition densities. Ionisation energies have
 also been tested and the expected trends are obtained, even if clearly our
 model can not recover the effects of the reorganisation of the $\sigma$ electrons
 in the cation. However, deviations
 from the all-electron calculations decrease with the size of the system.
-(3) They can be employed with both Hartree-Fock and DFT methods including PBE0, PBE, TPSS and TPSSh functionals. 
-CASPT2 calculations have also been positively tested.
-(4) They have been shown to function well whether their neighbouring atoms are other pseudo-carbons (as with fused carbon rings), hydrogen atoms (as in CH\(^{\bullet}_{3}\)),
-or a mixture of both (as in the polyenes or at the edge of fused ring systems). 
-(5) They offer a significant gain in computational time as compared to all-electron calculations.
-(6) They were employed to compute  UV and ECD spectra of extended, near-planar systems: helicenes
-and a coronene embedded in a nanotube. Despite the fact that our method does not reach chemical
-accuracy in ionisation energies, it can be useful to solve highly difficult assignations
-for large systems in a limited time.
+(6) They were employed to compute UV and ECD spectra of extended, non-planar systems (provided that the radii are large enough): helicenes
+and a coronene embedded in a nanotube. 
+
+The last three points are an improvement over the 2013 formulation of such potentials. Despite the fact that our method does not reach chemical accuracy in ionisation energies, it can be useful to solve highly difficult assignations for large systems in a limited time. 
 
 Our work remains ongoing, and we envisage two areas for further development.
 (1) We are at the early stages of creating potentials that can successfully interact with neighbouring all-electron atoms.
