--- a/main.tex
+++ b/main.tex
@@ -445,7 +445,7 @@ alter the influence of the sp$^2$-hybridised electrons.
 
 %yc
 In a comparison between CC2 theoretical calculations and experiment, Nakai \emph{et al.}
-show that ECD spectra of helicences can be accurately computed.\cite{nakai_theoretical_2012}
+show that Electronic Circular Dichroism (ECD) spectra of helicences can be accurately computed.\cite{nakai_theoretical_2012}
 First of all let us show here that for small helicenes (6 to 9 rings), it is possible to
 reproduce with good accuracy the experimental spectra with DFT (PBE0/def2-SV(P)).
 
