--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -1377,7 +1377,7 @@ Unique-ID = {{ISI:A1975AT25100002}},
 @article{nakamura2018,
 	title = {Ultrafast Charge Transfer and Relaxation Dynamics in Polymer-Encapsulating Single-Walled Carbon Nanotubes: Polythiophene and Coronene Polymer},
 	author = {Nakamura, Arao and Yamanaka, Ken-ichi and Miyaura, Kenshi and Lim, Hong En and Matsuda, Kazunari and Thendie, Boanerges and Miyata, Yasumitsu and Kochi, Taketo and Okada, Susumu and Shinohara, Hisanori},
-	journal = {The Journal of Physical Chemistry C},
+	journal = {J. Phys. Chem. C},
 	volume = {122},
 	number = {29},
 	pages = {16940-16949},
